--- a/src/Admin.css
+++ b/src/Admin.css
@@ -135,6 +135,17 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+input::placeholder {
+  color: #c5c5c5;
+}
+
+input::-webkit-input-placeholder {
+  color: #c5c5c5;
+}
+
+input:-ms-input-placeholder {
+  color: #c5c5c5;
+}
 
 /* layout & common */
 .admin-layout {
@@ -682,6 +693,9 @@ input[type="number"] {
 }
 
 .admin-work-inputWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   margin-top: 20px;
 }
 
@@ -708,7 +722,6 @@ input[type="number"] {
   border: 1px solid #d5d5d5;
   background-color: #f5f6fa;
   box-sizing: border-box;
-  color: #c5c5c5;
 }
 
 .admin-text-input {
@@ -718,7 +731,6 @@ input[type="number"] {
   border: 1px solid #d5d5d5;
   background-color: #f5f6fa;
   box-sizing: border-box;
-  color: #c5c5c5;
   flex: 1;
 }
 
@@ -742,4 +754,276 @@ input[type="number"] {
   padding: 16px;
   box-sizing: border-box;
   border-radius: 4px;
+}
+
+.admin-register-container {
+  padding: 30px 109px 50px 30px;
+  background-color: #f5f6fa;
+}
+
+.admin-people-registerWrap {
+  width: 1550px;
+  background-color: white;
+  padding: 60px 60px 40px;
+}
+
+.admin-register-inputCon {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.admin-register-half {
+  margin-top: 30px;
+  width: 50%;
+}
+
+.admin-register-inputWrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.admin-register-label {
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.admin-register-input {
+  border-radius: 4px;
+  border: 0.6px solid #d5d5d5;
+  height: 52px;
+  padding-left: 14px;
+  background-color: #f5f6fa;
+  font-size: 16px;
+}
+
+.admin-register-innerInputWrap,
+.admin-register-innerDropdownWrap {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+  align-items: end;
+}
+
+.admin-register-dropdownWrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.admin-register-dropbtn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 52px;
+  padding: 16px;
+  font-size: 16px;
+  background-color: #f5f6fa;
+  border: 0.6px solid #d5d5d5;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.admin-dropList {
+  border-bottom: 0.6px solid #d9d9d9;
+  border-right: 0.6px solid #d9d9d9;
+  border-left: 0.6px solid #d9d9d9;
+  padding: 24px 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  position: absolute;
+  width: 377px;
+  box-sizing: border-box;
+  background-color: white;
+}
+
+.admin-dropItem {
+  display: flex;
+  align-items: center;
+}
+
+.admin-custom-checkbox {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+  user-select: none;
+}
+
+.admin-custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.admin-custom-checkbox .admin-checkmark {
+  height: 24px;
+  width: 24px;
+  box-sizing: border-box;
+  background-image: url("./assets/images/ic_admin_uncheck.svg");
+  background-size: 24px 24px;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 4px;
+  margin-right: 8px;
+}
+
+.admin-custom-checkbox input:checked + .admin-checkmark {
+  background-color: #005bac;
+  border: none;
+  box-sizing: border-box;
+  background-image: url("./assets/images/ic_admin_check.svg");
+  background-size: 24px 24px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.admin-custom-checkbox .admin-checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.admin-custom-checkbox input:checked + .admin-checkmark::after {
+  display: block;
+}
+
+.admin-custom-checkbox .admin-checkmark::after {
+  left: 7px;
+  top: 3px;
+  width: 6px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.admin-register-textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.admin-register-textarea span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.admin-register-textarea textarea {
+  background-color: #f5f6fa;
+  border: 0.6px solid #d5d5d5;
+  resize: none;
+  height: 332px;
+  padding: 16px;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.admin-register-career,
+.admin-register-exam,
+.admin-register-education {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.admin-register-career span,
+.admin-register-exam span,
+.admin-register-education span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.admin-register-career,
+.admin-register-exam {
+  margin-top: 40px;
+}
+
+.admin-year-btnWrap {
+  width: 159px;
+}
+
+.admin-year-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 36px;
+  padding: 6px 16px;
+  font-size: 16px;
+  background-color: #f5f6fa;
+  border: 0.6px solid #d5d5d5;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.admin-year-list {
+  width: 159px;
+  height: 300px;
+  overflow-y: auto;
+  border-bottom: 0.6px solid #d9d9d9;
+  border-right: 0.6px solid #d9d9d9;
+  border-left: 0.6px solid #d9d9d9;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  position: absolute;
+  box-sizing: border-box;
+  background-color: white;
+}
+
+.admin-year-list li {
+  cursor: pointer;
+  padding: 8px 16px;
+}
+
+.admin-year-list li:hover {
+  background-color: #dfdfdf;
+  border-radius: 4px;
+}
+
+.admin-year-btnBas {
+  color: #c5c5c5;
+}
+
+.admin-register-btnWrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  text-align: center;
+  gap: 28px;
+}
+
+.admin-register-savebtn {
+  padding: 16px 121px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #005bac;
+  border: none;
+  border-radius: 6px;
+}
+
+.admin-logout-btn {
+  border: none;
+  background-color: white;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.admin-logout-btnWrap {
+  margin-top: 30px;
+  display: flex;
+  padding-left: 16px;
+  align-items: center;
+  gap: 16px;
+  cursor: pointer;
 }
