--- a/src/Admin.css
+++ b/src/Admin.css
@@ -1086,3 +1086,84 @@ input:-ms-input-placeholder {
   gap: 16px;
   cursor: pointer;
 }
+
+.admin-post-registerCon {
+  background-color: white;
+  padding: 60px 60px 40px;
+}
+
+.admin-post-selBtnWrap {
+  width: 141px;
+  height: 28px;
+  margin-top: 20px;
+}
+
+.admin-post-selBtnWrap p {
+  font-size: 14px;
+}
+
+.admin-post-selBtn {
+  width: 100%;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  border: none;
+  border-radius: 4px;
+  border: 1px solid #d5d5d5;
+  color: #c5c5c5;
+  font-weight: 500;
+  font-size: 14px;
+  margin-top: 6px;
+  cursor: pointer;
+}
+
+.admin-post-selBtnText {
+  color: #333;
+}
+
+.admin-post-btnLine {
+  display: flex;
+  gap: 8px;
+}
+
+.admin-post-inputWrap {
+  flex: 1;
+  margin-top: 20px;
+}
+
+.admin-post-inputWrap p {
+  font-size: 14px;
+}
+
+.admin-post-inputWrap input {
+  width: 100%;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  border: none;
+  border-radius: 4px;
+  border: 1px solid #d5d5d5;
+  font-weight: 500;
+  margin-top: 6px;
+  padding-left: 6px;
+  box-sizing: border-box;
+}
+
+.admin-post-dropList {
+  border-bottom: 0.6px solid #d9d9d9;
+  border-right: 0.6px solid #d9d9d9;
+  border-left: 0.6px solid #d9d9d9;
+  padding: 24px 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  position: absolute;
+  width: 141px;
+  box-sizing: border-box;
+  background-color: white;
+  z-index: 10;
+}
