--- a/src/style.css
+++ b/src/style.css
@@ -219,7 +219,7 @@
   padding: 10px;
   width: 100%;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 50px auto;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: relative;
 }
